--- a/Src/Zing.Web/packages.config
+++ b/Src/Zing.Web/packages.config
@@ -21,6 +21,6 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net40" />
   <package id="routedebugger" version="2.1.4.0" targetFramework="net40" />
-  <package id="Twitter.Bootstrap" version="2.3.2" targetFramework="net40" />
+  <package id="Twitter.Bootstrap" version="3.0.0-rc2" targetFramework="net40" />
   <package id="WebGrease" version="1.3.0" targetFramework="net40" />
 </packages>
