--- a/Src/Zing.Framework.Tests/Zing.Framework.Tests.csproj
+++ b/Src/Zing.Framework.Tests/Zing.Framework.Tests.csproj
@@ -68,7 +68,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <Content Include="Config\log4net.config" />
+    <Content Include="Config\log4net.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
