--- a/Src/Zing.Framework.Tests/packages.config
+++ b/Src/Zing.Framework.Tests/packages.config
@@ -7,6 +7,9 @@
   <package id="Glimpse.Mvc4" version="1.5.3" targetFramework="net40" />
   <package id="Iesi.Collections" version="3.2.0.1001" targetFramework="net40" />
   <package id="log4net" version="2.0.3" targetFramework="net40" />
+  <package id="Microsoft.Bcl" version="1.1.3" targetFramework="net40" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net40" />
+  <package id="Microsoft.Net.Http" version="2.2.13" targetFramework="net40" />
   <package id="NHibernate" version="3.3.3.4001" targetFramework="net40" />
   <package id="NHibernate.Glimpse" version="3.3.3.40011" targetFramework="net40" />
   <package id="NUnit" version="2.6.3" targetFramework="net40" />
