--- a/Src/Zing.Web/Modules/Zing.Module/Zing.Modules.csproj
+++ b/Src/Zing.Web/Modules/Zing.Module/Zing.Modules.csproj
@@ -117,6 +117,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\RecordEntry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Users\Models\UserEntity.cs" />
     <Compile Include="Users\Models\UserStatus.cs" />
