--- a/Src/Zing.Web/Zing.Web.csproj
+++ b/Src/Zing.Web/Zing.Web.csproj
@@ -611,6 +611,7 @@
     <Content Include="Views\Home\IndexTemp.cshtml" />
     <Content Include="Views\Account\Logon.cshtml" />
     <Content Include="Views\User\Index.cshtml" />
+    <Content Include="Views\User\Query.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
