--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ packages
 
 /Src/Zing.Framework.Tests/TestResult.xml
 /Src/Zing.Framework.Tests/Zing.Framework.Tests.csproj.VisualState.xml
+
+bower_components
+node_modules
