--- a/Src/Zing/Zing.Framework.csproj
+++ b/Src/Zing/Zing.Framework.csproj
@@ -223,44 +223,12 @@
     <Compile Include="Environment\AutofacUtil\DynamicProxy2\DynamicProxyExtensions.cs" />
     <Compile Include="Environment\AutofacUtil\DynamicProxy2\ConstructorFinderWrapper.cs" />
     <Compile Include="Environment\AutofacUtil\DynamicProxy2\DynamicProxyContext.cs" />
-    <Compile Include="Environment\Descriptor\IShellDescriptorManager.cs" />
-    <Compile Include="Environment\Descriptor\Models\ShellDescriptor.cs" />
-    <Compile Include="Environment\Descriptor\ShellDescriptorCache.cs" />
-    <Compile Include="Environment\Extensions\DefaultCriticalErrorProvider.cs" />
-    <Compile Include="Environment\Extensions\ExtensionEntry.cs" />
-    <Compile Include="Environment\Extensions\ExtensionLoaderCoordinator.cs" />
-    <Compile Include="Environment\Extensions\ExtensionLoadingContext.cs" />
-    <Compile Include="Environment\Extensions\ExtensionManager.cs" />
-    <Compile Include="Environment\Extensions\ExtensionsModule.cs" />
-    <Compile Include="Environment\Extensions\Folders\ExtensionHarvester.cs" />
-    <Compile Include="Environment\Extensions\Folders\IExtensionFolders.cs" />
-    <Compile Include="Environment\Extensions\Folders\IExtensionHarvester.cs" />
-    <Compile Include="Environment\Extensions\Folders\ModuleFolders.cs" />
-    <Compile Include="Environment\Extensions\ICriticalErrorProvider.cs" />
-    <Compile Include="Environment\Extensions\IExtensionLoaderCoordinator.cs" />
-    <Compile Include="Environment\Extensions\IExtensionManager.cs" />
-    <Compile Include="Environment\Extensions\Loaders\ExtensionLoaderBase.cs" />
-    <Compile Include="Environment\Extensions\Loaders\IExtensionLoader.cs" />
-    <Compile Include="Environment\Extensions\Loaders\ReferencedExtensionLoader.cs" />
-    <Compile Include="Environment\Extensions\Models\DefaultExtensionTypes.cs" />
-    <Compile Include="Environment\Extensions\Models\ExtensionDescriptor.cs" />
-    <Compile Include="Environment\Extensions\Models\Feature.cs" />
-    <Compile Include="Environment\Extensions\Models\FeatureDescriptor.cs" />
-    <Compile Include="Environment\Extensions\OrchardFeatureAttribute.cs" />
-    <Compile Include="Environment\Extensions\OrchardSuppressDependencyAttribute.cs" />
-    <Compile Include="Environment\IAssemblyLoader.cs" />
-    <Compile Include="Environment\IAssemblyNameResolver.cs" />
-    <Compile Include="Environment\IBuildManager.cs" />
-    <Compile Include="Environment\ShellBuilder\CompositionStrategy.cs" />
-    <Compile Include="Environment\ShellBuilder\Models\ShellBlueprint.cs" />
+    <Compile Include="Environment\Configuration\RecordBlueprint.cs" />
     <Compile Include="Events\IEventHandler.cs" />
     <Compile Include="Exceptions\ExceptionExtensions.cs" />
-    <Compile Include="FileSystems\Dependencies\DefaultAssemblyProbingFolder.cs" />
-    <Compile Include="FileSystems\Dependencies\DefaultDependenciesFolder.cs" />
-    <Compile Include="FileSystems\Dependencies\DefaultExtensionDependenciesManager.cs" />
-    <Compile Include="FileSystems\Dependencies\IAssemblyProbingFolder.cs" />
-    <Compile Include="FileSystems\Dependencies\IDependenciesFolder.cs" />
-    <Compile Include="FileSystems\Dependencies\IExtensionDependenciesManager.cs" />
+    <Compile Include="FileSystems\AppData\AppDataFolder.cs" />
+    <Compile Include="FileSystems\AppData\IAppDataFolder.cs" />
+    <Compile Include="FileSystems\AppData\IAppDataFolderRoot.cs" />
     <Compile Include="FileSystems\FileSystemsModule.cs" />
     <Compile Include="FileSystems\LockFile\ILockFile.cs" />
     <Compile Include="FileSystems\LockFile\DefaultLockFileManager.cs" />
@@ -275,7 +243,6 @@
     <Compile Include="Mvc\ActionFilter\AutoMapAttribute.cs" />
     <Compile Include="Mvc\ActionFilter\AutoMapFilter.cs" />
     <Compile Include="Mvc\Extensions\ControllerExtensions.cs" />
-    <Compile Include="Mvc\ZingControllerFactory.cs" />
     <Compile Include="Query\IHqlExpressionFactory.cs" />
     <Compile Include="Security\FormsAuthenticationService.cs" />
     <Compile Include="Security\InternalAuthorize.cs" />
@@ -283,26 +250,10 @@
     <Compile Include="Data\ServiceBase.cs" />
     <Compile Include="Data\SessionFactoryHolder.cs" />
     <Compile Include="Data\SessionLocator.cs" />
-    <Compile Include="Environment\Configuration\IShellSettingsManager.cs" />
     <Compile Include="Environment\Configuration\ShellSettings.cs" />
-    <Compile Include="Environment\Configuration\ShellSettingsManager.cs" />
     <Compile Include="Environment\Configuration\ShellSettingsSerializer.cs" />
-    <Compile Include="Environment\Configuration\TenantState.cs" />
-    <Compile Include="Environment\DefaultHostEnvironment.cs" />
     <Compile Include="Environment\DefaultZingHost.cs" />
-    <Compile Include="Environment\DefaultZingShell.cs" />
-    <Compile Include="Environment\IRouteProvider.cs" />
-    <Compile Include="Environment\IShellContainerRegistrations.cs" />
     <Compile Include="Environment\IZingHost.cs" />
-    <Compile Include="Environment\IZingShell.cs" />
-    <Compile Include="Environment\RunningShellTable.cs" />
-    <Compile Include="Environment\ShellBuilder\ShellContainerFactory.cs" />
-    <Compile Include="Environment\ShellBuilder\ShellContext.cs" />
-    <Compile Include="Environment\ShellBuilder\ShellContextFactory.cs" />
-    <Compile Include="Environment\WorkContextAccessor.cs" />
-    <Compile Include="Environment\WorkContextImplementation.cs" />
-    <Compile Include="Environment\WorkContextModule.cs" />
-    <Compile Include="Environment\WorkContextProperty.cs" />
     <Compile Include="Environment\ZingStarter.cs" />
     <Compile Include="ExceptionMessages.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -311,16 +262,10 @@
     </Compile>
     <Compile Include="Exceptions\DefaultExceptionPolicy.cs" />
     <Compile Include="Exceptions\IExceptionPolicy.cs" />
-    <Compile Include="FileSystems\AppData\AppDataFolder.cs" />
-    <Compile Include="FileSystems\AppData\IAppDataFolder.cs" />
-    <Compile Include="FileSystems\AppData\IAppDataFolderRoot.cs" />
     <Compile Include="IDependency.cs" />
     <Compile Include="Data\IService.cs" />
-    <Compile Include="IWorkContextAccessor.cs" />
     <Compile Include="Logging\CastleLogger.cs" />
     <Compile Include="Logging\CastleLoggerFactory.cs" />
-    <Compile Include="Environment\HostEnvironment.cs" />
-    <Compile Include="Environment\IHostEnvironment.cs" />
     <Compile Include="Logging\ILogger.cs" />
     <Compile Include="Logging\ILoggerFactory.cs" />
     <Compile Include="Logging\LoggingExtensions.cs" />
@@ -365,9 +310,6 @@
     <Compile Include="Mvc\FluentMetadata\Registration\IRegistrar.cs" />
     <Compile Include="Mvc\FluentMetadata\Registration\ModelMetadataRegistrar.cs" />
     <Compile Include="Mvc\FluentMetadata\Registration\ModelMetadataRegistry.cs" />
-    <Compile Include="Mvc\HttpContextWorkContext.cs" />
-    <Compile Include="Mvc\IHttpContextAccessor.cs" />
-    <Compile Include="Mvc\IZingViewPage.cs" />
     <Compile Include="Mvc\FluentMetadata\ModelMetadata\CompareValidationMetadata.cs" />
     <Compile Include="Mvc\FluentMetadata\ModelMetadata\CustomValidationMetadata.cs" />
     <Compile Include="Mvc\FluentMetadata\ModelMetadata\DelegateBasedValidator.cs" />
@@ -398,13 +340,6 @@
     <Compile Include="Mvc\FluentMetadata\ModelMetadata\StringLengthValidationMetadata.cs" />
     <Compile Include="Mvc\FluentMetadata\ModelMetadata\StringMetadataItemBuilder.cs" />
     <Compile Include="Mvc\FluentMetadata\ModelMetadata\ValueTypeMetadataItemBuilderExtensions.cs" />
-    <Compile Include="Mvc\MvcModule.cs" />
-    <Compile Include="Mvc\Routes\DefaultRouteProvider.cs" />
-    <Compile Include="Mvc\Routes\IRoutePublisher.cs" />
-    <Compile Include="Mvc\Routes\RouteDescriptor.cs" />
-    <Compile Include="Mvc\Routes\RoutePublisher.cs" />
-    <Compile Include="Mvc\Routes\ShellRoute.cs" />
-    <Compile Include="Mvc\ViewEngines\Razor\WebViewPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\CreateUserParams.cs" />
     <Compile Include="Security\IAuthenticationService.cs" />
@@ -426,6 +361,7 @@
     <Compile Include="UI\Pager\PagingExtensions.cs" />
     <Compile Include="UI\Pager\RouteValueDictionaryExtensions.cs" />
     <Compile Include="Utility\Extensions\DependencyOrdering.cs" />
+    <Compile Include="Utility\Extensions\EnumerableExtensions.cs" />
     <Compile Include="Utility\Extensions\HttpRequestExtensions.cs" />
     <Compile Include="Utility\Extensions\InvokeExtensions.cs" />
     <Compile Include="Utility\Extensions\ReadOnlyCollectionExtensions.cs" />
@@ -433,8 +369,6 @@
     <Compile Include="Utility\Hash.cs" />
     <Compile Include="Validation\JetBrains.Annotations.cs" />
     <Compile Include="Validation\PathValidation.cs" />
-    <Compile Include="WorkContext.cs" />
-    <Compile Include="WorkContextExtensions.cs" />
     <Compile Include="ZingCoreException.cs" />
     <Compile Include="ZingException.cs" />
     <Compile Include="ZingFatalException.cs" />
