--- a/Src/Zing/Zing.Framework.csproj
+++ b/Src/Zing/Zing.Framework.csproj
@@ -170,12 +170,12 @@
     <Compile Include="Caching\IVolatileToken.cs" />
     <Compile Include="Caching\Signals.cs" />
     <Compile Include="Caching\Weak.cs" />
-    <Compile Include="Data\Conventions\AttributeCollectionConvention.cs" />
     <Compile Include="Data\Conventions\CacheConventions.cs" />
     <Compile Include="Data\Conventions\CascadeAllDeleteOrphanAttribute.cs" />
     <Compile Include="Data\Conventions\RecordTableNameConvention.cs" />
     <Compile Include="Data\DataModule.cs" />
     <Compile Include="Data\DefaultDatabaseCacheConfiguration.cs" />
+    <Compile Include="Data\EntityBase.cs" />
     <Compile Include="Data\IDatabaseCacheConfiguration.cs" />
     <Compile Include="Data\IRepository.cs" />
     <Compile Include="Data\ISessionConfigurationCache.cs" />
@@ -245,7 +245,6 @@
     <Compile Include="Mvc\ActionFilter\AutoMapAttribute.cs" />
     <Compile Include="Mvc\ActionFilter\AutoMapFilter.cs" />
     <Compile Include="Mvc\Extensions\ControllerExtensions.cs" />
-    <Compile Include="Query\IHqlExpressionFactory.cs" />
     <Compile Include="Security\FormsAuthenticationService.cs" />
     <Compile Include="Security\InternalAuthorize.cs" />
     <Compile Include="Security\SecurityFilter.cs" />
@@ -352,6 +351,10 @@
     <Compile Include="Security\MembershipSettings.cs" />
     <Compile Include="Services\Clock.cs" />
     <Compile Include="Services\IClock.cs" />
+    <Compile Include="UI\Navigation\INavigationProvider.cs" />
+    <Compile Include="UI\Navigation\Menu.cs" />
+    <Compile Include="UI\Navigation\NavigationBuilder.cs" />
+    <Compile Include="UI\Navigation\NavigationManager.cs" />
     <Compile Include="UI\Navigation\Pager.cs" />
     <Compile Include="UI\Navigation\PagerParameters.cs" />
     <Compile Include="UI\Pager\IPagedList.cs" />
